Fixed up collapsing and expanding of tree and map pane.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/data-discovery.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/data-discovery.css
@@ -240,11 +240,3 @@ input.ui-button {
 #expand-collapse.collapsed {
     left: -12px;
 }
-
-#expand-collapse div {
-    background: url({{baseUrl}}/includes/images/CollapseLeft-12.gif) no-repeat;
-}
-
-#expand-collapse.collapsed div {
-    background: url({{baseUrl}}/includes/images/CollapseRight-12.gif) no-repeat;
-}
